# SecurityLlama

./: .gitignore  AGENTS.md  CODEX_START_HERE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.agent/: EXECPLAN-kali-copilot.md  PLANS.md
.github/workflows/: ci.yml
Planning/: KALI_COPILOT_AGENTS.md  README-PACKET.md
config/: config.example.toml  scope.example.toml
docs/: MANUAL_ACCEPTANCE.md
scripts/: bootstrap-kali.sh  ci.sh  smoke-kali.sh  uninstall.sh
shell/: kali-copilot.bash  kali-copilot.tmux.conf  kali-copilot.zsh  securityllama.bash  securityllama.tmux.conf  securityllama.zsh
src/kali_copilot/: __init__.py  __main__.py  app.py  attachments.py  audit.py  background.py  cli.py  clipboard.py  cockpit.py  config.py  console.py  context.py  doctor.py  install.py  models.py  ollama.py  paths.py  policy.py  prompting.py  proposal.py  reporting.py  sanitize.py  scope.py  session.py  shell_bridge.py  tmux.py  ui.py
tests/: fake_ollama.py
tests/integration/: test_background_process.py
tests/unit/: test_app.py  test_attachments.py  test_audit.py  test_background.py  test_bootstrap.py  test_cli.py  test_clipboard.py  test_cockpit.py  test_config.py  test_context.py  test_fake_ollama.py  test_install.py  test_models.py  test_ollama.py  test_policy.py  test_proposal.py  test_reporting.py  test_sanitize.py  test_security_invariants.py  test_session.py  test_shell_bridge.py  test_tmux.py  test_ui.py
