[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kali-copilot"
version = "0.1.0.dev0"
description = "Human-in-the-loop Ollama terminal copilot for authorized Kali testing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SecurityLlama contributors" }]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "prompt-toolkit>=3.0,<4",
  "rich>=13.7,<15",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
kali-copilot = "kali_copilot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/kali-copilot/shell" = [
  "shell/kali-copilot.zsh",
  "shell/kali-copilot.bash",
  "shell/kali-copilot.tmux.conf",
]
"share/kali-copilot/config" = ["config/config.example.toml", "config/scope.example.toml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S108", "S604"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["kali_copilot"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=kali_copilot --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src", "."]
